--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@prisma/client": "^5.10.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.11.0"
